@@ -1,3 +1,6 @@
+HEAD
+	+ Fixes migration adding Queues OU
+	+ Write asterisk configuration file as asterisk:asterisk
 1.3.14
 	+ Add call parking (extension 700 and above)
 	+ URI dialing has been deleted
